---

= What's new
:hardbreaks:
:icons: font
:imagesdir: ../media/

[.lead]
Learn what’s new in BlueXP economic efficiency.

//tag::whats-new[]

== 14 March 2024 

If you have existing assets in place and want to determine whether a technology needs to be updated, you can use the BlueXP economic efficiency technology refresh options. You can either review a short assessment of your current workloads and get recommendations, or if you sent AutoSupport logs to NetApp within the past 90 days, the service can now provide a workload simulation to see how your workloads perform on new hardware.

You can also add a workload and exclude existing workloads from the simulation. 

Previously, you could only take an assessment of your assets and identify whether a technology refresh is recommended. 

The feature is now part of the Tech refresh option in the left navigation. 

Learn more about the link:../use/tech-refresh.html[Evaluate a technology refresh].

//Learn more about the https://docs.netapp.com/us-en/bluexp-economic-efficiency/use/tech-refresh.html[Evaluate a technology refresh].

== 08 November 2023 
This release of BlueXP economic efficiency includes a new option to take an assessment of your assets and identify whether a technology refresh is recommended. The service includes a new Tech refresh option in the left navigation, new pages where you can take an assessment of your current workloads and assets, and a report that provides recommendations to you. 

== 02 April 2023 

The new BlueXP economic efficiency service identifies storage assets with current or forecasted low capacity and provides recommendations on data tiering or additional capacity for on-premises AFF systems.

link:https://docs.netapp.com/us-en/bluexp-economic-efficiency/get-started/intro.html[Learn more about BlueXP economic efficiency]. 
//include 3 most recent releases
//end::whats-new[]