@@ -1,7 +1,7 @@
 indexpage:
   title: BlueXP economic efficiency documentation
-  lead: The BlueXP economic efficiency service identifies clusters with current or forecasted low capacity and provides you recommendations on data tiering or additional capacity (for AFF systems). The service also provides technology refresh recommendations on systems that are nearing end of life.
-  summary: The BlueXP economic efficiency service identifies clusters with current or forecasted low capacity and provides you recommendations on data tiering or additional capacity (for AFF systems). The service also provides technology refresh recommendations on systems that are nearing end of life.
+  lead: The BlueXP economic efficiency service identifies clusters with current or forecasted low capacity and provides you recommendations on data tiering. 
+  summary: The BlueXP economic efficiency service identifies clusters with current or forecasted low capacity and provides you recommendations on data tiering. 
   keywords: technology refresh, tech refresh, AFF, capacity, economic efficiency, bluexp, data tier, hardware end of life
   tiles:
   - title: Get started
