@@ -37,9 +37,9 @@ link:../get-started/capacity-setup.html[Complete steps to set up the service].
 After you set up the service, here's what you might do next. 
 
 [role="quick-margin-list"]
-* link:../use/tech-refresh.html[Take a tech refresh assessment or simulate your workloads on new hardware].
+//* link:../use/tech-refresh.html[Take a tech refresh assessment or simulate your workloads on new hardware].
 * link:../use/capacity-review-status.html[Review capacity planning status].
-* link:../use/capacity-add.html[Add capacity].
+//* link:../use/capacity-add.html[Add capacity].
 * link:../use/capacity-tier-data.html[Tier cold data to cloud storage to free up storage].
 * link:../use/capacity-reminders.html[Optionally, set reminders to check again].
 
