@@ -11,16 +11,18 @@ summary: If your clusters are currently below or forecasted to be below the thre
 :imagesdir: ../media/use/
 
 [.lead]
-If storage assets in your environment are currently below or forecasted to be below the threshold of 90% capacity, the economic efficiency service identifies those as low-capacity resources and alerts you. Additionally, the economic efficiency service provides recommendations on whether you should tier data or obtain additional capacity. 
+If storage assets in your environment are currently below or forecasted to be below the threshold of 90% capacity, the economic efficiency service identifies those as low-capacity resources and alerts you. Additionally, the economic efficiency service provides recommendations on whether you should tier data. 
+
+//If storage assets in your environment are currently below or forecasted to be below the threshold of 90% capacity, the economic efficiency service identifies those as low-capacity resources and alerts you. Additionally, the economic efficiency service provides recommendations on whether you should tier data or obtain additional capacity.
 
 You can review the following types of data to assist in the capacity issue resolution. 
 
 * Platform
 * Country where asset is located 
 * Current and forecasted capacity by month
-* Capacity utilization and percent 
-* Latency trends
-* IOPS trends
+//* Capacity utilization and percent 
+//* Latency trends
+//* IOPS trends
 
 .Steps 
 
@@ -28,7 +30,8 @@ You can review the following types of data to assist in the capacity issue resol
 . Select *Evaluate Storage Options* for the asset.
 . Choose one of the options: 
 +
-* *Add Capacity*: Continue by link:../use/capacity-add.html[adding capacity].
+//* *Add Capacity*: Continue by link:../use/capacity-add.html[adding capacity].
+* *Best Practices*: Continue by clicking on the link to view best practices. 
 * *Tier cold data*: Continue by link:../use/capacity-tier-data.html[tiering cold data to cloud storage and freeing up storage].
 * *No action needed*: Continue by link:../use/capacity-reminders.html[selecting no action and setting reminders to check again].
 
