@@ -1,14 +1,10 @@
 section: use
 title: Use BlueXP economic efficiency
 entries:
-  - title: Evaluate a tech refresh
-    url: /use/tech-refresh.html
   - title: Review and remediate capacity issues
     url: /use/capacity-remediate-overview.html
   - title: Review capacity status
     url: /use/capacity-review-status.html
-  - title: Add capacity
-    url: /use/capacity-add.html
   - title: Tier cold data to cloud storage
     url: /use/capacity-tier-data.html
   - title: Set reminders to check again
