@@ -15,6 +15,14 @@ Learn what’s new in BlueXP economic efficiency.
 
 //tag::whats-new[]
 
+== May 2024 
+Some BlueXP economic efficiency features have been temporarily disabled: 
+
+* Technology refresh
+* Add capacity
+
+
+
 == 14 March 2024 
 
 If you have existing assets in place and want to determine whether a technology needs to be updated, you can use the BlueXP economic efficiency technology refresh options. You can either review a short assessment of your current workloads and get recommendations, or if you sent AutoSupport logs to NetApp within the past 90 days, the service can now provide a workload simulation to see how your workloads perform on new hardware.
